# game-math

./: .gitignore  CMakeLists.txt  GameMath.hpp  README.md
examples/BasicExample/: CMakeLists.txt  main.cpp
examples/BoardGame/: CMakeLists.txt  README.md
examples/BoardGame/include/: BoardGame.h  Position.h
examples/BoardGame/src/: BoardGame.cpp  main.cpp
examples/CheckSIMD/: main.cpp
include/GameMath/: Config.hpp  GameMath.hpp  Matrix.hpp  Utility.hpp  Vector.hpp
tests/: CMakeLists.txt  test_GameMath.cpp
